# EodHistoricalDataToolkit

./: .gitignore  CMakeLists.txt  README.md  REUSE.toml  applyDataPatch.sh  calculate.sh  calculateSingleTicker.sh  cleanAndFetchFromExchange.sh  cleanAndFetchFundamentalData.sh  cleanAndFetchHistoricalData.sh  fetchAll.sh  fetchAllExchangesTickers.sh  fetchExchangeTickers.sh  fetchExchanges.sh  fetchFundamentalData.sh  fetchFundamentalDataOfSingleTicker.sh  fetchHistoricalData.sh  fetchHistoricalDataOfSingleTicker.sh  fetchTickers.sh  generateComparisonReport.sh  generateDataPatch.sh  generateMarketReports.sh  generateScreenerReport.sh  generateSingleTickerReport.sh  generateTickerReports.sh  postprocessing.sh  postprocessingFilter.sh  postprocessingFilter_Michelle.sh  postprocessing_working.sh  preprocessing.sh  rank.sh  refreshData.sh  report.sh  scanData.sh  updateFromExchange.sh  updateGapsInFundamentalData.sh  updateGapsInHistoricalData.sh  valgrindFetchFundamentalData.sh  working.sh
config/: generateTickerReports.json
data/: Damodaran2024_CountryRisk_Appendix8.csv  Damodaran2024_CountryRisk_Appendix8.json  STU.json  bondYieldTable.json  countryRisk2024.json  defaultSpreadTable.json  equityRiskPremiumByCountry.json  exchanges.json
src/: CurlToolkit.h  DataStructures.h  DateFunctions.h  FinancialAnalysisFunctions.h  FinancialAnalysisToolkit.h  JsonFunctions.h  NumericalFunctions.h  NumericalToolkit.h  PlottingFunctions.h  ReportingFunctions.h  ScreenerFunctions.h  ScreenerToolkit.h  StringFunctions.h  StringToolkit.h  UtilityFunctions.h  applyPatch.cc  calculate.cc  csvTools.cc  date.h  fetch.cc  generateMarketReports.cc  (+14 more)
(+75 files in other folders)
